--- a/PsuedoCode/index.html
+++ b/PsuedoCode/index.html
@@ -11,7 +11,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body onload="cookieMonsterEat('userName')">
+<body>
 <header id="mast">
     <h1>Psuedo Code</h1>
 </header>
