Login, Create new item
Added user login verification and add new item screen

--- a/PsuedoCode/userlogin.html
+++ b/PsuedoCode/userlogin.html
@@ -34,7 +34,7 @@
     </header>
 </section>
 <form name="userlogin" action="userlogin.php" method="post"  >
-    <p>
+    <form >
     <table>
         <tr><th>Username:&nbsp</th> <td><input type="text" name="username" id="username"/></td></tr>
         <tr><th>Password:&nbsp</th> <td><input type="password" name="password" id="password"/></td></tr>
