--- a/PsuedoCode/userlogin.html
+++ b/PsuedoCode/userlogin.html
@@ -18,7 +18,7 @@
 </head>
 <body onload="cookieMonsterEat('userName')">
 <header id="mast">
-    <h1>Inventory Management Website</h1>
+    <h1>Psuedo Code</h1>
 </header>
 <nav id="global">
     <ul>
